--- a/templates/altaUsuario.html
+++ b/templates/altaUsuario.html
@@ -36,8 +36,10 @@
                     
                         <a class="nav-link active btn " href="{{url_for('index')}}">Inicio</a>
                  
-                      <button>Iniciar sesión</button> -->
-                     </div>
+                      <button>Iniciar sesión</button> 
+                    </div>
+                    -->
+                     
                     </div>
 
                       
